# Learning-Aiogram

./: pyproject.toml
callbacks/: main.py
inline_keyboard/: keyboards.py  main.py  practice.py
keyboard/: main.py
keyboard2/: main.py
lesson1/: main.py
project/: keyboards.py  main.py
